--- a/db_math_gencompare_credentials.yaml
+++ b/db_math_gencompare_credentials.yaml
@@ -1,7 +1,22 @@
 practice_database:
   user: "qss20"
-  password: "xtPdDZHnxKMFSD5RyP"
+  password: "xtPdDZHnxKMFS5DRyP"
   port: 3306
   database: "math_gencompare"
   host: "qss20-7570-db.c.dartmouth.edu"
-sql_dataset: "math_gencompare.sql"
+sql_dataset: |
+  -- Create the database
+  CREATE DATABASE math_gencompare;
+
+  -- Use the new database
+  USE math_gencompare;
+
+  -- Create an example table
+  CREATE TABLE example_table (
+      id INT AUTO_INCREMENT PRIMARY KEY,
+      data VARCHAR(255) NOT NULL
+  );
+
+  -- Insert example data
+  INSERT INTO example_table (data) VALUES ('example data 1');
+  INSERT INTO example_table (data) VALUES ('example data 2');
